<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_Username"
            android:layout_marginTop="10dp"

            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/checktimingsbutton_text"
            android:id="@+id/checktimingsbutton_id"

            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/checktimingsbydate__text"

            android:id="@+id/checktimingsbydatebutton_id"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/managetimings__text"
            android:layout_gravity="center_horizontal"
            android:id="@+id/managetimings__id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/addnewuser_text"
            android:layout_gravity="center_horizontal"
            android:id="@+id/addnewuser_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/deletebutton_text"
            android:layout_gravity="center_horizontal"
            android:id="@+id/deleteuserbutton_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:background="@drawable/button_blue"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />


    </LinearLayout>
</ScrollView>




    <ListView
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/bright_foreground_inverse_material_light"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>


