<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="200dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    android:layout_width="300dp"
    android:paddingTop="10dp"

    >



    <EditText
        android:layout_height="40dp"
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"

        android:inputType="textPassword"
        android:typeface="sans"
        android:hint="@string/enterpasswrodhint"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextbackground"
        android:textStyle="italic"
        android:paddingLeft="5dp"/>



    <EditText
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"

        android:typeface="sans"
        android:hint="@string/enterpasswrodhintagain"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextbackground"
        android:textStyle="italic"
        android:paddingLeft="5dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:id="@+id/linearLayout1">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/cancelstring"
            android:layout_marginStart="100dp"

            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/logintext"
            android:layout_marginStart="100dp"

            android:layout_gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_blue"
            android:textSize="20sp"
            />


    </LinearLayout>
</LinearLayout>