<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

      >


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.hfad.esbroster"
            android:weightSum="1"
            android:background="#00ccfffd"
            android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"

            android:focusable="true">

            <!-- TODO: Update blank fragment layout -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/name_spinner"

                    android:entries="@array/shift_selector"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbackground"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    android:drawableEnd="@drawable/ic_today_indigo_600_24dp"
                    android:paddingEnd="5dp"/>
               <!-- <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/name_edittext_id"
                    android:hint="@string/namehint"
                    android:dropDownSelector="@color/accent_material_dark"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edittextbackground"
                    android:textStyle="italic"
                    android:paddingLeft="5dp"
                    android:drawableEnd="@drawable/ic_account_circle_indigo_600_24dp"
                    android:paddingEnd="5dp"/> -->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text=""
                    android:id="@+id/edittext_ID1"
                    android:focusable="false"
                    android:layout_marginTop="20dp"
                    android:hint="@string/datehint"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbackground"
                    android:textStyle="italic"
                    android:paddingLeft="5dp"
                    android:drawableEnd="@drawable/ic_today_indigo_600_24dp"
                    android:paddingEnd="5dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/shift_spinner"

                    android:entries="@array/shift_selector"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbackground"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    android:drawableEnd="@drawable/ic_today_indigo_600_24dp"
                    android:paddingEnd="5dp"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/button_text"
                    android:id="@+id/savebutton"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_blue"
                    android:textSize="20sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/delbutton_text"

                    android:id="@+id/deletebutton"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_blue"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/updatebutton_text"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/updatebutton"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_blue"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/addbutton_text"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/adduserbutton"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_blue"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/deletebutton_text"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/deleteuserbutton"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:background="@drawable/button_blue"
                    android:layout_marginBottom="10dp" />



            </LinearLayout>






        </LinearLayout>
    </ScrollView>
    <ListView
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/bright_foreground_inverse_material_light"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>