<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/name_spinner"

                    android:entries="@array/shift_selector"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbackground"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    android:drawableEnd="@drawable/ic_today_indigo_600_24dp"
                    android:paddingEnd="5dp"/>



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/edittext_id_date"
                    android:focusable="false"
                    android:typeface="sans"
                    android:hint="@string/datehint"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/edittextbackground"
                    android:textStyle="italic"
                    android:paddingLeft="5dp"
                    android:drawableEnd="@drawable/ic_today_indigo_600_24dp"
                    android:paddingEnd="5dp"
                   />

                <Button
                    android:id="@+id/checkbutton_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/button_textformembers"
                    android:layout_marginStart="100dp"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="100dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_blue"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

            </LinearLayout>



    </ScrollView>

    <ListView
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/bright_foreground_inverse_material_light"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>